# tollo

./: .gitignore  BACKEND_IMPROVEMENT_ANALYSIS.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  KEYBINDINGS.md  LICENSE  PUBLISHING_TODO.md  README.md  TESTING.md  ZUSTAND_MIGRATION.md  index.html  install.sh  keyeka.md  package.json  pnpm-lock.yaml  windows.md
.cursor/rules/: pnpm.mdc
.github/workflows/: release.yml
src/: App.css  App.original.tsx  App.tsx  app.rs  components.rs  help_message.rs  lib.rs  main.rs  ui.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/data/: fin.m3u
src-tauri/icons/: icon.icns
src-tauri/src/: channels.rs  database.rs  error.rs  fuzzy_search.rs  groups.rs  image_cache.rs  image_cache_api.rs  lib.rs  m3u_parser.rs  m3u_parser_helpers.rs  main.rs  playlists.rs  search.rs  settings.rs  state.rs  utils.rs
src/appdata/: config.rs  db.rs  local.rs  mod.rs
src/components/: CachedImage.tsx  ChannelDetails.tsx  ChannelList.tsx  ChannelLoadingProgress.tsx  GroupList.tsx  Help.tsx  Icons.tsx  MainContent.tsx  NavigationSidebar.tsx  SavedFilters.tsx  Settings.tsx  VideoPlayer.tsx
src/hooks/: useAppState.ts  useChannelListName.ts  useChannelSearch.ts  useImageCache.ts  useKeyboardNavigation.ts  useSavedFilters.ts
src/m3u/: fetch_channels.rs  mod.rs  parse.rs  play_channel.rs
src/stores/: README.md  asyncPlaylistStore.ts  channelStore.ts  favoritesStore.ts  filterStore.ts  filtersStore.ts  groupStore.ts  historyStore.ts  index.ts  playerStore.ts  searchStore.ts  settingsStore.ts  uiStore.ts  userDataStore.ts  (+1 more)
(+26 files in other folders)
