[package]
name = "tollo"
version = "0.1.0"
authors = ["Bergo <bergo@tutanota.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
ratatui = "0.22.0"
regex = "1.9.3"
fuzzy-matcher = "0.3.7"
strsim = "0.10.0"
reqwest = { version = "*", features = ["blocking"] }
dirs = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.31.0", features = ["macros"] }
